@@ -8,7 +8,10 @@ export(CQI.perl)
 export(CQI.rcqp)
 export(Corpus)
 export(RegistryFile)
+export(as.corpusEnc)
 export(as.cqp)
+export(as.nativeEnc)
+export(as.utf8)
 export(cooccurrences)
 export(flatten)
 export(getObjects)
@@ -41,7 +44,6 @@ exportMethods("[")
 exportMethods("[[")
 exportMethods("name<-")
 exportMethods("names<-")
-exportMethods(adjustEncoding)
 exportMethods(aggregate)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermDocumentMatrix)
@@ -52,7 +54,6 @@ exportMethods(as.markdown)
 exportMethods(as.partitionBundle)
 exportMethods(as.sparseMatrix)
 exportMethods(as.speeches)
-exportMethods(as.utf8)
 exportMethods(barplot)
 exportMethods(blapply)
 exportMethods(browse)
