@@ -39,8 +39,8 @@ setGeneric("cpos", function(.Object, ... ) standardGeneric("cpos"))
 #' @rdname cpos-method
 setMethod("cpos", "character", function(.Object, query, pAttribute = getOption("polmineR.pAttribute"), cqp = is.cqp, encoding = NULL, verbose = TRUE, ...){
   if (length(query) > 1) warning("query needs to be a character vector with length 1")
-  if (is.null(encoding)) encoding <- getEncoding(.Object) 
-  query <- adjustEncoding(query, encoding)
+  if (is.null(encoding)) encoding <- getEncoding(.Object) # get encoding of the corpus
+  query <- as.corpusEnc(query, encoding)
   if (class(cqp) == "function") cqp <- cqp(query)
   if (cqp == FALSE) {
     if (grepl("[\\|]", query)) warning("Special character that may cause problems in query!")
