@@ -25,7 +25,7 @@ setMethod("getTerms", "character", function(.Object, pAttribute, robust=FALSE, v
     warning("... not yet implemented")
   }
   Encoding(strs) <- corpusEncoding
-  strs <- iconv(strs, from=corpusEncoding, to="UTF-8")
+  strs <- as.nativeEnc(strs, corpusEncoding)
   if (robust != FALSE){
     if (robust == TRUE){
       if (length(strs) != length(unique(strs))){
