@@ -1,34 +1,24 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/adjustEncoding_method.R
-\docType{methods}
-\name{adjustEncoding}
-\alias{adjustEncoding}
-\alias{adjustEncoding,character-method}
+\name{as.utf8}
+\alias{as.corpusEnc}
+\alias{as.nativeEnc}
 \alias{as.utf8}
-\alias{as.utf8,character-method}
-\title{adjust encoding}
+\title{Conversion between corpus and native encoding.}
 \usage{
-adjustEncoding(.Object, ...)
+as.utf8(x, from = "latin1")
 
-\S4method{adjustEncoding}{character}(.Object, corpusEncoding)
+as.nativeEnc(x, corpusEnc)
 
-as.utf8(.Object, ...)
-
-\S4method{as.utf8}{character}(.Object, from = "latin1")
+as.corpusEnc(x, corpusEnc)
 }
 \arguments{
-\item{.Object}{the object (usually a character vector, nothing else is implemented so far)}
+\item{x}{the object (a character vector)}
 
-\item{...}{further parameters}
-
-\item{corpusEncoding}{the encoding of the corpus (e.g. "latin1")}
-
-\item{from}{encoding}
+\item{corpusEnc}{the encoding of the corpus (e.g. "latin1", "UTF-8")}
 }
 \description{
-Utility method to help making sure that the encoding of a character string or the relevant parts of an object
-conform to the encoding to the corpus.
-
-adjustEncoding-method
+Utility functions to convert encoding between the native encoding and the 
+encoding of the corpus.
 }
 
